--- a/test/reflect/config.ini
+++ b/test/reflect/config.ini
@@ -1,3 +1,4 @@
+; mysql config
 [mysql]
 address=10.20.30.40
 port=3306
@@ -5,7 +6,14 @@ username=root
 password=123456
 
 
+
+# redis config
+; [
+;[   ]
 [redis]
+;hihei
+;= hahaha
+;xxx=
 host=127.0.0.1
 port=6379
 password=root
