--- a/test/reflect/config.ini
+++ b/test/reflect/config.ini
@@ -13,8 +13,10 @@ password=123456
 [redis]
 ;hihei
 ;= hahaha
-;xxx=
+xxx=test
 host=127.0.0.1
+;port=hahaha
 port=6379
 password=root
 database=0
+test=false
